hotfix(env): Fixes error running spell-check hook inside pre-commit

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -171,6 +171,7 @@ repos:
           inst/pre-commit-.*|
           inst/usethis-legacy-hook|
           ^LICENSE$|
+          ^environment.yaml|
           renv/.*|
           revdep/.*|
           tests/testthat/in/.*|
